--- a/app/plugins.css
+++ b/app/plugins.css
@@ -27818,7 +27818,7 @@ button.swiper-pagination-bullet {
  * Copyright 2011- The Bootstrap Authors
  * Copyright 2011- Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE) */
-*/:root {
+:root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
