--- a/app/globals.css
+++ b/app/globals.css
@@ -10796,6 +10796,19 @@ textarea:-ms-input-placeholder {
   opacity: 1;
 }
 
+.product-detail-modal-overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
 /*!
 Animate.css - http://daneden.me/animate
 Version - 3.4.0
@@ -27469,7 +27482,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .product-details-popup {
-  pointer-events: none;
+  /* pointer-events: none; */
   margin: 0 auto;
   height: 520px;
   border-radius: 7px;
@@ -27498,6 +27511,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   height: 40px;
   border-radius: 50%;
   background: #fff;
+  cursor: pointer;
 }
 
 .product-details-popup .product-details-close-btn:hover i {
@@ -27568,7 +27582,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .product-details-popup {
-  pointer-events: none;
+  /* pointer-events: none; */
   margin: 0 auto;
   height: 520px;
   border-radius: 7px;
@@ -27598,6 +27612,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   height: 40px;
   border-radius: 50%;
   background: #fff;
+  cursor: pointer;
 }
 
 .product-details-popup .product-details-close-btn:hover i {
